@@ -5,9 +5,10 @@
  * For commercial licenses see https://www.tiny.cloud/
  */
 
+import { Element as DomElement, Node as DomNode, Range } from '@ephox/dom-globals';
 import { Adt, Arr, Option, Options } from '@ephox/katamari';
 import { Compare, Element, SelectorFilter, SelectorFind } from '@ephox/sugar';
-import { Range, Element as DomElement, Node as DomNode } from '@ephox/dom-globals';
+import * as SelectionUtils from '../selection/SelectionUtils';
 
 interface TableCellRng {
   readonly start: Element<DomElement>;
@@ -33,7 +34,8 @@ const tableSelection = (rng: TableCellRng, table: Element<DomElement>, cells: El
 
 const deleteAction = Adt.generate([
   { removeTable: [ 'element' ] },
-  { emptyCells: [ 'cells' ] }
+  { emptyCells: [ 'cells' ] },
+  { deleteCellSelection : [ 'rng', 'cell' ] }
 ]);
 
 const isRootFromElement = (root: Element<any>): (cur: Element<any>) => boolean =>
@@ -54,6 +56,12 @@ const getTableFromCellRng = (cellRng: TableCellRng, isRoot: (e: Element<any>) =>
 
 const getTableCells = (table) => SelectorFilter.descendants(table, 'td,th');
 
+const getCellRng = (rng: Range, isRoot: (e: Element<any>) => boolean) => {
+  const startCell = getClosestCell(rng.startContainer, isRoot);
+  const endCell = getClosestCell(rng.endContainer, isRoot);
+  return Options.lift2(startCell, endCell, tableCellRng);
+};
+
 const getCellRangeFromStartTable = (cellRng: TableCellRng, isRoot): Option<TableCellRng> =>
   getClosestTable(cellRng.start, isRoot).bind((table) => Arr.last(getTableCells(table)).map((endCell) => tableCellRng(cellRng.start, endCell)));
 
@@ -66,29 +74,20 @@ const partialSelection = (isRoot: (e: Element<any>) => boolean, rng: Range): Opt
       () => endCell.bind((endCell) => getClosestTable(endCell, isRoot).bind((table) => Arr.head(getTableCells(table)).map((startCell) => tableCellRng(startCell, endCell)))),
       (startCell) => getClosestTable(startCell, isRoot).bind((table) => Arr.last(getTableCells(table)).map((endCell) => tableCellRng(startCell, endCell)))
     ),
-    (cellRng: any) => isWithinSameTable(isRoot, cellRng) ? Option.none() : getCellRangeFromStartTable(cellRng, isRoot)
+    (cellRng: TableCellRng) => isWithinSameTable(isRoot, cellRng) ? Option.none() : getCellRangeFromStartTable(cellRng, isRoot)
   );
 };
 
 const isWithinSameTable = (isRoot: (e: Element<any>) => boolean, cellRng: TableCellRng) =>
   getTableFromCellRng(cellRng, isRoot).isSome();
 
-const getCellRng = (rng: Range, isRoot: (e: Element<any>) => boolean) => {
-  const startCell = getClosestCell(rng.startContainer, isRoot);
-  const endCell = getClosestCell(rng.endContainer, isRoot);
+const getTableSelectionFromCellRng = (cellRng: TableCellRng, isRoot: (e: Element<any>) => boolean) =>
+  getTableFromCellRng(cellRng, isRoot).map((table) => tableSelection(cellRng, table, getTableCells(table)));
 
-  return Options.lift2(startCell, endCell, tableCellRng)
-    .filter(isExpandedCellRng)
-    .filter((cellRng) => isWithinSameTable(isRoot, cellRng))
-    .orThunk(() => partialSelection(isRoot, rng));
-};
-
-const getTableSelectionFromCellRng = (cellRng: TableCellRng, isRoot: (e: Element<any>) => boolean) => getTableFromCellRng(cellRng, isRoot).map((table) => tableSelection(cellRng, table, getTableCells(table)));
-
-const getTableSelectionFromRng = (root, rng: Range) => {
-  const isRoot = isRootFromElement(root);
-  return getCellRng(rng, isRoot).bind((cellRng) => getTableSelectionFromCellRng(cellRng, isRoot));
-};
+const getTableSelection = (optCellRng: Option<TableCellRng>, rng: Range, isRoot: (e: Element<any>) => boolean) => optCellRng
+  .filter((cellRng) => isExpandedCellRng(cellRng) && isWithinSameTable(isRoot, cellRng))
+  .orThunk(() => partialSelection(isRoot, rng))
+  .bind((cRng) => getTableSelectionFromCellRng(cRng, isRoot));
 
 const getCellIndex = <T> (cells: Element<T>[], cell: Element<T>): Option<number> => Arr.findIndex(cells, (x) => Compare.eq(x, cell));
 
@@ -96,6 +95,10 @@ const getSelectedCells = (tableSelection: TableSelection) => Options.lift2(
   getCellIndex(tableSelection.cells, tableSelection.rng.start),
   getCellIndex(tableSelection.cells, tableSelection.rng.end),
   (startIndex, endIndex) => tableSelection.cells.slice(startIndex, endIndex + 1));
+
+const isCellContentSelected = (optCellRng: Option<TableCellRng>, rng: Range) => optCellRng
+  .filter((cellRng) => !isExpandedCellRng(cellRng) && SelectionUtils.hasAllContentsSelected(cellRng.start, rng))
+  .map((cellRng) => cellRng.start);
 
 const getAction = (tableSelection: TableSelection) =>
   getSelectedCells(tableSelection)
@@ -105,4 +108,9 @@ const getAction = (tableSelection: TableSelection) =>
     });
 
 export const getActionFromCells = (cells) => deleteAction.emptyCells(cells);
-export const getActionFromRange = (root, rng: Range) => getTableSelectionFromRng(root, rng).bind(getAction);
+export const getActionFromRange = (root: Element, rng: Range) => {
+  const isRoot = isRootFromElement(root);
+  const optCellRng = getCellRng(rng, isRoot);
+  return isCellContentSelected(optCellRng, rng).map((cell) => deleteAction.deleteCellSelection(rng, cell))
+    .orThunk(() => getTableSelection(optCellRng, rng, isRoot).bind(getAction));
+};
